--- a/app/src/main/res/layout/activity_connected_devices.xml
+++ b/app/src/main/res/layout/activity_connected_devices.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:text="Connected Devices :"
         android:textStyle="bold"
+        android:visibility="gone"
         android:textColor="@color/black"
         android:fontFamily="@font/montserrat_bold"
         app:layout_constraintStart_toStartOf="parent"
