--- a/app/src/main/res/layout/activity_dslinformation.xml
+++ b/app/src/main/res/layout/activity_dslinformation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/_16sdp"
+    android:padding="@dimen/_10sdp"
     tools:context=".DSLInformationActivity">
 
     <include
@@ -106,7 +106,7 @@
         android:layout_marginTop="@dimen/_16sdp"
 
         android:fontFamily="@font/montserrat_medium"
-        android:text="Upstream noise safety coefficient(dB):"
+        android:text="Up noise safety coefficient(dB):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/maxDownRate" />
 
@@ -116,7 +116,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
         android:fontFamily="@font/montserrat_medium"
-        android:text="Downstream noise safety coefficient(dB):"
+        android:text="Down noise safety coefficient(dB):"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/upNoise" />
