--- a/app/src/main/res/layout/activity_wlaninfo.xml
+++ b/app/src/main/res/layout/activity_wlaninfo.xml
@@ -118,8 +118,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
             app:layout_constraintBottom_toBottomOf="@+id/tV_macAddress"
-            app:layout_constraintStart_toEndOf="@id/tv_transmitPower"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/tv_transmitPower" />
 
         <TextView
             android:id="@+id/tv_channelNum"
