--- a/app/src/main/res/layout/connected_devices_list_item.xml
+++ b/app/src/main/res/layout/connected_devices_list_item.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/_12ssp">
 
-    <ImageView
-        android:id="@+id/iv_deviceIcon"
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
-        android:layout_margin="@dimen/_12ssp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <ImageView-->
+<!--        android:id="@+id/iv_deviceIcon"-->
+<!--        android:layout_width="@dimen/_20sdp"-->
+<!--        android:layout_height="@dimen/_20sdp"-->
+<!--        android:layout_margin="@dimen/_12ssp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <TextView
         android:id="@+id/tV_deviceName"
@@ -20,7 +21,7 @@
         android:text="Mobile12233"
         android:textSize="@dimen/_10sdp"
         android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintStart_toEndOf="@id/iv_deviceIcon"
-        app:layout_constraintTop_toTopOf="@id/iv_deviceIcon" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
