--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,17 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar">
+        layout="@layout/toolbar"
+        android:visibility="gone">
 
     </include>
+    <WebView
+        android:id="@+id/web"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
     <Spinner
@@ -88,7 +96,7 @@
         android:visibility="gone"
         android:inputType="textPassword"
         android:padding="@dimen/_6sdp"
-        android:text="KA154627"
+        android:text="N9447281"
         android:textAlignment="viewStart"
         android:textColorHint="@color/black"
         android:textSize="@dimen/_14ssp"
